# mcas

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
deploy/: CMakeLists.txt
deploy/docker/: Dockerfile.pymm-fedora-32  Dockerfile.pymm-fedora-34  Dockerfile.pymm-ubuntu-18  Dockerfile.pymm-ubuntu-21
examples/personalities/cpp_rangeindex/: CMakeLists.txt
examples/personalities/cpp_symtab/: CMakeLists.txt
examples/pymm/feature_selection/: README.md  dataset_20KB_features.npy  dataset_20KB_target.npy  feature_selection_dram.py  linear_regression_mult_var.py  upload_data_to_nvm.py
info/: configuration.md
src/ado/: CMakeLists.txt
src/ado/demo/: CMakeLists.txt
src/ado/passthru/: CMakeLists.txt
src/ado/testing/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/ado-perf/src/: get_cpu_mask_from_string.h
src/apps/kvstore-perf/: experiment.cpp  experiment.h  program_options.cpp  program_options.h  statistics.h
src/components/: CMakeLists.txt
src/components/api/: kvstore.h  kvstore_itf.h  mcas_itf.h
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt
src/lib/cw/: CMakeLists.txt
src/lib/hot/: BiNode.hpp  BiNodeInformation.hpp  HOTSingleThreaded.hpp  HOTSingleThreadedChildPointer.hpp  HOTSingleThreadedChildPointerInterface.hpp  HOTSingleThreadedDeletionInformation.hpp  HOTSingleThreadedInsertStackEntry.hpp  HOTSingleThreadedInterface.hpp  HOTSingleThreadedIterator.hpp  HOTSingleThreadedNode.hpp  HOTSingleThreadedNodeBase.hpp  HOTSingleThreadedNodeBaseInterface.hpp  HOTSingleThreadedNodeInterface.hpp  InsertInformation.hpp  KeyComparator.hpp  Makefile  NodeAllocationInformations.hpp  NodeMergeInformation.hpp  NodeParametersMapping.hpp  PartialKeyMappingHelpers.hpp  SingleMaskPartialKeyMappingInterface.hpp  SparsePartialKeys.hpp  TwoEntriesNode.hpp  hot-example.cpp
src/lib/libadoproto/: CMakeLists.txt
src/lib/libccpm/: CMakeLists.txt
src/lib/libkvstore/: CMakeLists.txt
src/lib/libkvstore/unit_test/: CMakeLists.txt  test1.c  test2.c
src/lib/libmm/: CMakeLists.txt
src/lib/libnupm/: CMakeLists.txt
src/lib/libthreadipc/: CMakeLists.txt
src/lib/stx_blindi/: blindi_btree_hybrid_nodes.h
src/mm/: mm_plugin_itf.h  safe_print.h
src/mm/ccpm/: CMakeLists.txt
src/mm/jemalloc/: CMakeLists.txt
src/mm/rcalb/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/mcas/: CMakeLists.txt
src/server/mcas/src/: ado_manager.cpp  ado_manager.h  ado_map.h  buffer_manager.h  config_file.cpp  config_file.h  connection_handler.cpp  connection_handler.h  connection_state.cpp  connection_state.h  launcher.cpp  launcher.h  main.cpp  pool_manager.h  protocol.h  protocol_ostream.h  range.h  shard.cpp  shard.h  shard_ado.cpp
testing/ado-test/src/: main.cpp
testing/kv-test/src/: main.cpp
testing/regression/mcas/: README.md  cfg_hstore.py  cfg_hstore_ado.py  configs.py  dax.py  devdax.py  dm.py  functions.sh  hstore-throughput.sh  hstore-u1.sh  mcas-hstore-ado-0.sh  mcas-hstore-ado-sock-0.sh  mcas-hstore-cc-ado-0.sh  mcas-hstore-cc-kvtest-0.sh  mcas-hstore-dax-conflict-0.sh  mcas-hstore-kvtest-0.sh  mcas-hstore-mc-kvtest-0.sh  mcas-hstore-mr-kvtest-0.sh  mcas-hstore-put-sock-0.sh  run-tests.sh  (+5 more)
(+124 files in other folders)
